# Word-Search

./: .gitignore  CMakeLists.txt  README.md  s.sh
doc/: Doxyfile
doc/html/: _u_i_8h_source.html  annotated.html  bug.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7ad25bca70c4d3d9103f75d82f41ef94.html  dir_7b5d38f1875f1b693f62ca6a108a1129.html  dir_80ca315d56e1a334df9a8d6433271cf6.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_ffe5e504e2a853d0f038dc933ddd996b.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  group__lib_different_matrix.html  group__lib_utilities.html  group__lib_word_search.html  index.html  matrix_8h_source.html  menudata.js  namespacedifferent_matrix.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaceutilities.html  namespaceword_search.html  pages.html  search_8h_source.html  strings_8h_source.html  structdifferent_matrix_1_1_matrix-members.html  structdifferent_matrix_1_1_matrix.html  structdifferent_matrix_1_1_strs-members.html  structdifferent_matrix_1_1_strs.html  topics.html  utilities_8h_source.html
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  groups_0.js  pages_0.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js  variables_0.js  (+2 more)
include/: UI.h  matrix.h  search.h  strings.h  utilities.h
share/: dictionary.txt  test.txt
src/: main.cpp
src/UI/: UI.cpp  UI.h  UIMod.cpp
src/differentMatrix/: matrix.cpp  matrix.h  strings.cpp  strings.h
src/utilities/: utilities.cpp  utilities.h
src/wordSearch/: search.cpp  search.h  searchMod.cpp
tests/: CMakeLists.txt  testing.cpp
